--- a/src/app/blog/posts/content.mdx
+++ b/src/app/blog/posts/content.mdx
@@ -47,8 +47,8 @@ Your personal details are used across the whole app to render personalized headi
   {
     code:
 `const person = {
-    firstName: "Selene",
-    lastName: "Yu",
+    firstName: "Mohsin Murtaza",
+    lastName: "Siddiqui",
     get name() {
       return "...";
     },
@@ -99,12 +99,12 @@ Each page have it's own object that manages the personalized content, such as he
     code:
 `const home = {
     label: "Home",
-    title: "Selene Yu's Portfolio",
-    description: "Portfolio website showcasing my work as a Design Engineer",
-    headline: <>Design engineer and builder</>,
+    title: "Mohsin Murtaza Siddiqui's Portfolio",
+    description: "Portfolio website showcasing my work as a Software Engineer",
+    headline: <>Software engineer and builder</>,
     subline: (
       <>
-        I'm Selene, a design engineer at <InlineCode>FLY</InlineCode>, where I craft intuitive
+        I'm Mohsin, a software engineer at <InlineCode>FLY</InlineCode>, where I craft intuitive
         <br /> user experiences. After hours, I build my own projects.
       </>
     ),
