--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -1,16 +1,16 @@
 ---
-title: "Automating Design Handovers with a Figma to Code Pipeline"
+title: "Project 3"
 publishedAt: "2024-04-01"
-summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
+summary: "Summary of Project 3"
 images:
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/image-03.jpg"
 team:
-  - name: "John Doe"
+  - name: "Mohsin Murtaza Siddiqui"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-link: "https://once-ui.com/"
+    linkedIn: "https://www.linkedin.com/in/mohsinsiddiqui10/"
+link: "https://github.com/msid8535"
 ---
 
 ## Overview
