--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Building Once UI, a Customizable Design System"
+title: "Project 1 title"
 publishedAt: "2024-04-08"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
+summary: "Summary of Project 1"
 images:
   - "/images/projects/project-01/cover-01.jpg"
   - "/images/projects/project-01/cover-02.jpg"
@@ -11,7 +11,7 @@ team:
   - name: "Mohsin Murtaza Siddiqui"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+    linkedIn: "https://www.linkedin.com/in/mohsinsiddiqui10/"
 ---
 
 ## Overview
