--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Once UI: Open-source design system"
+title: "Project 2"
 publishedAt: "2024-04-08"
 images:
   - "/images/projects/project-01/cover-04.jpg"
