chore: cleaning up

--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,12 +1,9 @@
 ---
-title: "Project 1 title"
-publishedAt: "2024-04-08"
-summary: "Summary of Project 1"
+title: "Git-lite"
+publishedAt: "2025-09-30"
+summary: "A small, educational Java implementation of core Git object operations."
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/project-01/git.jpeg"
 team:
   - name: "Mohsin Murtaza Siddiqui"
     role: "Software Engineer"
