chore: added 2 projects

--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,7 +1,10 @@
 ---
-title: "Project 2"
-publishedAt: "2024-04-08"
+title: "Grep"
+publishedAt: "2025-10-01"
+summary: "From-scratch implementation of a grep-like utility in Python"
 images:
-  - "/images/projects/project-01/cover-04.jpg"
-  - "/images/projects/project-01/video-01.mp4"
+  - "/images/projects/project-01/cover-02.jpg"
+  - "/images/projects/project-01/image-03.jpg"
+
+link: "https://github.com/msid8535/grep"
 ---
