--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -1,16 +1,12 @@
 ---
-title: "Project 3"
-publishedAt: "2024-04-01"
-summary: "Summary of Project 3"
+title: "Sono"
+publishedAt: "2025-09-01"
+summary: "Full-stack Music streaming application"
 images:
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/image-03.jpg"
-team:
-  - name: "Mohsin Murtaza Siddiqui"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/in/mohsinsiddiqui10/"
-link: "https://github.com/msid8535"
+
+link: "https://github.com/msid8535/Sono"
 ---
 
 ## Overview
