--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -4,11 +4,8 @@ publishedAt: "2025-09-30"
 summary: "A small, educational Java implementation of core Git object operations."
 images:
   - "/images/projects/project-01/git.jpeg"
-team:
-  - name: "Mohsin Murtaza Siddiqui"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/in/mohsinsiddiqui10/"
+
+link: "https://github.com/msid8535/Git"
 ---
 
 ## Overview
