--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Git-lite"
 publishedAt: "2025-09-30"
-summary: "A small, educational Java implementation of core Git object operations."
+summary: "Java implementation of core Git object operations."
 images:
-  - "/images/projects/project-01/git.jpeg"
+  - "/images/projects/project-01/git.jpg"
 
 link: "https://github.com/msid8535/Git"
 ---
