--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -3,8 +3,7 @@ title: "Grep"
 publishedAt: "2025-10-01"
 summary: "From-scratch implementation of a grep-like utility in Python"
 images:
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
+  - "/images/projects/project-01/grep.jpeg"
 
 link: "https://github.com/msid8535/grep"
 ---
