--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -3,8 +3,7 @@ title: "Sono"
 publishedAt: "2025-09-01"
 summary: "Full-stack Music streaming application"
 images:
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
+  - "/images/projects/project-01/sono.jpeg"
 
 link: "https://github.com/msid8535/Sono"
 ---
