--- a/src/app/work/projects/project1.mdx
+++ b/src/app/work/projects/project1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Sono"
 publishedAt: "2025-09-01"
-summary: "Full-stack Music streaming application"
+summary: "Full-stack music streaming application"
 images:
   - "/images/projects/project-01/sono.jpeg"
 
