feat: major overhaul (work and about pages)

--- a/src/app/work/projects/project4.mdx
+++ b/src/app/work/projects/project4.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Project 4"
-publishedAt: "2025-09-30"
-summary: "Summary"
+title: "Movie Predictor"
+publishedAt: "2025-07-3"
+summary: "Machine Learning project built in Python"
 images:
+  - "/images/projects/project-01/movie.jpg"  
 
-link: "https://github.com/msid8535/"
+link: "https://github.com/msid8535/movie_predictor"
 ---
