--- a/src/app/work/projects/project5.mdx
+++ b/src/app/work/projects/project5.mdx
@@ -1,8 +1,10 @@
 ---
-title: "Project 5"
-publishedAt: "2025-09-30"
-summary: "Summary"
+title: "Currency Conversion"
+publishedAt: "2025-03-21"
+summary: "CLI app built in Java and SQLite"
 images:
+  - "/images/projects/project-01/currency.jpg" 
 
-link: "https://github.com/msid8535/"
+
+link: "https://github.com/msid8535/CC"
 ---
