--- a/src/app/work/projects/project6.mdx
+++ b/src/app/work/projects/project6.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Project 6"
-publishedAt: "2025-09-30"
-summary: "Summary"
+title: "Sydney Neighbour-hoods"
+publishedAt: "2025-06-03"
+summary: "Livability score calculator"
 images:
+  - "/images/projects/project-01/sydney.jpeg" 
 
-link: "https://github.com/msid8535"
+link: "https://github.com/msid8535/sydneyneighbourhoods"
 ---
