chore: changed git username

--- a/src/app/work/projects/project2.mdx
+++ b/src/app/work/projects/project2.mdx
@@ -5,7 +5,7 @@ summary: "Java implementation of core Git object operations."
 images:
   - "/images/projects/project-01/git.jpg"
 
-link: "https://github.com/msid8535/Git"
+link: "https://github.com/moh-sin19/Git"
 ---
 
 ## Overview
