--- a/src/app/work/projects/project5.mdx
+++ b/src/app/work/projects/project5.mdx
@@ -6,5 +6,5 @@ images:
   - "/images/projects/project-01/currency.jpg" 
 
 
-link: "https://github.com/msid8535/CC"
+link: "https://github.com/moh-sin19/CC"
 ---
