--- a/src/app/work/projects/project1.mdx
+++ b/src/app/work/projects/project1.mdx
@@ -5,7 +5,7 @@ summary: "Full-stack music streaming application"
 images:
   - "/images/projects/project-01/sono.jpeg"
 
-link: "https://github.com/msid8535/Sono"
+link: "https://github.com/moh-sin19/Sono"
 ---
 
 ## Overview
