--- a/src/app/work/projects/project3.mdx
+++ b/src/app/work/projects/project3.mdx
@@ -5,5 +5,5 @@ summary: "From-scratch implementation of a grep-like utility in Python"
 images:
   - "/images/projects/project-01/grep.jpeg"
 
-link: "https://github.com/msid8535/grep"
+link: "https://github.com/moh-sin19/grep"
 ---
