--- a/src/app/work/projects/project9.mdx
+++ b/src/app/work/projects/project9.mdx
@@ -4,5 +4,5 @@ publishedAt: "2020-09-30"
 summary: "Summary"
 images:
 
-link: "https://github.com/msid8535"
+link: "https://github.com/moh-sin19"
 ---
